<resources>
    <string name="app_name">Travel</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>

    <string name="action_register">register</string>
    <string name="action_sign_in">sign_in</string>
    <string name="sign_in">sign-in</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="coupon">쿠폰함 </string>
    <string name="mycoupon"> 보유 쿠폰 </string>
    <string name="location_name"> > 종로구 진행상황 </string>
    <string name="action_search">search</string>
    <string name="recent_travel_location">최근 여행지</string>
    <string name="location">서초구 / 서울시 / 대한민국</string>

    <string name="starbucks1">Starbucks 아메리카노 R</string>
    <string name="starbucks_exp">유효기간 : ~ 2018.01.02</string>
</resources>
